--- a/gugudan.html
+++ b/gugudan.html
@@ -8,7 +8,7 @@
         /* 표의 테두리 스타일 설정 */
         table {
             border-collapse: collapse;
-            border: 2px solid blue; /* 파란색 선으로 테두리 설정 */
+            border: 2px solid rgb(0, 225, 255); /* 파란색 선으로 테두리 설정 */
             width: 100%; /* 표의 너비 설정 */
         }
 
